# RootLens

./: .env.example  .gitignore  ARCHITECTURE_DATA_FLOW.md  LICENSE  RAILWAY_DEPLOY.md  README.md  SPECS.md  docker-compose.yml  package-lock.json  supabase-schema-v4.sql  supabase-schema.sql
c2pa-signer/: package-lock.json  package.json  wrangler.jsonc
c2pa-signer/src/: index.ts
c2pa-wasm-test/: Cargo.toml
document/mvp/: C2PA_DATA_SPECIFICATION_CHANGE.md  SPECS.md  SPECS_CORRECTED.md  SPECS_CORRECTIONS.md  VALUE.md
document/phase2/: backend-c2pa-verification.md  monetization-strategy.md  multi-tree-scalability.md  trustless-tee-architecture.md
frontend/: .gitignore  Dockerfile  i18n.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/lib/: navigation.ts
frontend/messages/: en.json  ja.json
frontend/public/: c2pa.worker.min.js
frontend/scripts/: create-merkle-tree.ts
lens-worker/: .dev.vars.example  package-lock.json  package.json  wrangler.toml
lens-worker/src/: index.ts
next-app/: package-lock.json  package.json  supabase-schema.sql
next-app/app/: page.tsx  providers.tsx
next-app/scripts/: create-merkle-tree.ts
redis-data/: dump.rdb
redis-data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
shared/: package-lock.json  package.json
shared/c2pa/: hash-specs.ts
shared/types/: index.js  index.ts  job.js  job.ts  proof.js  proof.ts  purchase.js  (+1 more)
worker/: Dockerfile  package-lock.json  package.json  railway.json  tsconfig.json
(+73 files in other folders)
