[package]
name = "c2pa-wasm-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# add_signer を削除し、まずは file_io だけ（または何も指定せず）試します
c2pa = { version = "0.33.0", default-features = false, features = ["file_io"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] } # Wasmでの乱数生成に必要になる可能性大